Reinforced database-cassandra, database-common, database-migration, general, junit5, logging-aspect, logging-slf4j, netty, openapi-management, probes docs
Expanded EN docs to 90-95% coverage and re-translated RU (EN/RU parity).
Every documented API verified against Kora sources (branch 1.0 = 1.2.17).

- junit5/probes/logging-slf4j: removed hallucinated identifiers from frontmatter triggers
- logging-aspect: added missing Kotlin tab for the StructuredArgument example
- logging-slf4j: fixed Kafka config cross-links (config-consumer / config-producer)