@@ -74,7 +74,7 @@ Kora строит приложение на этапе компиляции: о�
 
 ===! ":fontawesome-brands-java: `Java`"
 
-    Требуется версия не ниже [JDK 17](https://openjdk.org/projects/jdk/17/), рекомендуется [`JDK` `25+`](https://openjdk.org/projects/jdk/25/).
+    Требуется версия не ниже [JDK 17](https://openjdk.org/projects/jdk/17/), рекомендуется [`JDK` `21`](https://openjdk.org/projects/jdk/21/) - версия, которую используют официальные примеры и шаблоны приложений.
 
     Минимальная конфигурация в `build.gradle`:
     ```groovy
@@ -82,9 +82,15 @@ Kora строит приложение на этапе компиляции: о�
         id "java"
     }
 
-    sourceCompatibility = JavaVersion.VERSION_25
-    targetCompatibility = JavaVersion.VERSION_25
+    java {
+        toolchain {
+            languageVersion = JavaLanguageVersion.of(21)
+            vendor = JvmVendorSpec.ADOPTIUM
+        }
+    }
     ```
+
+    Указание `vendor` необязательно и просто соответствует набору инструментов `Adoptium`, который используется в примерах проектов; его можно опустить или выбрать другого поставщика.
 
 === ":simple-kotlin: `Kotlin`"
 
@@ -124,8 +130,12 @@ Kora рассчитана на сборку через [Gradle](https://gradle.o
         id "application"
     }
 
-    sourceCompatibility = JavaVersion.VERSION_25
-    targetCompatibility = JavaVersion.VERSION_25
+    java {
+        toolchain {
+            languageVersion = JavaLanguageVersion.of(21)
+            vendor = JvmVendorSpec.ADOPTIUM
+        }
+    }
 
     configurations {
         koraBom
@@ -133,11 +143,14 @@ Kora рассчитана на сборку через [Gradle](https://gradle.o
         compileOnly.extendsFrom(koraBom)
         implementation.extendsFrom(koraBom)
         api.extendsFrom(koraBom)
+        testImplementation.extendsFrom(koraBom)
+        testAnnotationProcessor.extendsFrom(koraBom)
     }
 
     dependencies {
         koraBom platform("ru.tinkoff.kora:kora-parent:1.2.18")
         annotationProcessor "ru.tinkoff.kora:annotation-processors"
+        testAnnotationProcessor "ru.tinkoff.kora:annotation-processors"
     }
     ```
 
@@ -165,6 +178,7 @@ Kora рассчитана на сборку через [Gradle](https://gradle.o
     val koraBom: Configuration by configurations.creating
     configurations {
         ksp.get().extendsFrom(koraBom)
+        kspTest.get().extendsFrom(koraBom)
         compileOnly.get().extendsFrom(koraBom)
         api.get().extendsFrom(koraBom)
         implementation.get().extendsFrom(koraBom)
@@ -173,10 +187,94 @@ Kora рассчитана на сборку через [Gradle](https://gradle.o
     dependencies {
         koraBom(platform("ru.tinkoff.kora:kora-parent:1.2.18"))
         ksp("ru.tinkoff.kora:symbol-processors")
+        kspTest("ru.tinkoff.kora:symbol-processors")
     }
     ```
 
     Более подробный пример есть в [руководстве по созданию первого приложения](../guides/getting-started.md).
+
+Записи `testAnnotationProcessor` (`Java`) и `kspTest` (`Kotlin`) подключают те же обработчики Kora к набору тестовых исходников.
+Они необходимы, чтобы генерировались исходники, создаваемые во время тестов, - например те, что производятся для [`@KoraAppTest`](junit5.md); без них при компиляции тестов не будет сгенерирован нужный код Kora.
+
+В реальных проектах версию `BOM` обычно выносят в свойство `gradle.properties` (например `koraVersion`) и ссылаются на нее как `platform("ru.tinkoff.kora:kora-parent:$koraVersion")`, чтобы версия объявлялась в одном месте, а не была прописана в каждом модуле.
+
+!!! note "Доступ к внутренностям компилятора"
+
+    Некоторые обработчики аннотаций `Java` читают внутренние компоненты `jdk.compiler`. На новых версиях `JDK` для этого может потребоваться экспортировать соответствующие пакеты компилятору.
+    Если компиляция завершается ошибками `IllegalAccessError` или `module jdk.compiler does not export ...`, добавьте в `gradle.properties` следующие аргументы `JVM`:
+
+    ```properties
+    org.gradle.jvmargs=--add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED \
+      --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED \
+      --add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED \
+      --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED \
+      --add-exports jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED \
+      --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
+    ```
+
+### Maven { #maven }
+
+Рекомендуемой системой сборки остается `Gradle`, но проект на `Java` можно собрать и через [Maven](https://maven.apache.org/).
+Поддержка `Maven` распространяется только на `Java`: набор инструментов `KSP` для `Kotlin` не имеет интеграции с `Maven`, поэтому проекты на `Kotlin` должны использовать `Gradle`.
+
+Проще всего унаследоваться от `ru.tinkoff.kora:kora-parent` как от родителя `Maven`.
+Опубликованный `POM` `kora-parent` содержит секцию `<build>`, которая автоматически настраивает `maven-compiler-plugin` `3.8.1` (с аргументом компилятора `-parameters` и путем обработчика аннотаций `ru.tinkoff.kora:annotation-processors`), `maven-surefire-plugin` `2.22.2` и устанавливает свойство `java.version` в `17`:
+
+```xml
+<parent>
+    <groupId>ru.tinkoff.kora</groupId>
+    <artifactId>kora-parent</artifactId>
+    <version>1.2.17</version>
+    <relativePath/>
+</parent>
+```
+
+Если у проекта уже есть собственный родитель, импортируйте `kora-parent` как `BOM` и настройте плагин компилятора явно:
+
+```xml
+<dependencyManagement>
+    <dependencies>
+        <dependency>
+            <groupId>ru.tinkoff.kora</groupId>
+            <artifactId>kora-parent</artifactId>
+            <version>1.2.17</version>
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
+    </dependencies>
+</dependencyManagement>
+
+<build>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.8.1</version>
+            <configuration>
+                <compilerArgs>
+                    <arg>-parameters</arg>
+                </compilerArgs>
+                <annotationProcessorPaths>
+                    <path>
+                        <groupId>ru.tinkoff.kora</groupId>
+                        <artifactId>annotation-processors</artifactId>
+                        <version>1.2.17</version>
+                    </path>
+                </annotationProcessorPaths>
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
+```
+
+После этого зависимости модулей Kora объявляются без явного указания версии, так как их версии управляются импортированным `BOM`:
+
+```xml
+<dependency>
+    <groupId>ru.tinkoff.kora</groupId>
+    <artifactId>http-server-undertow</artifactId>
+</dependency>
+```
 
 ## Зависимости { #dependencies }
 
@@ -194,11 +292,14 @@ Kora рассчитана на сборку через [Gradle](https://gradle.o
         compileOnly.extendsFrom(koraBom)
         implementation.extendsFrom(koraBom)
         api.extendsFrom(koraBom)
+        testImplementation.extendsFrom(koraBom)
+        testAnnotationProcessor.extendsFrom(koraBom)
     }
 
     dependencies {
         koraBom platform("ru.tinkoff.kora:kora-parent:1.2.18")
         annotationProcessor "ru.tinkoff.kora:annotation-processors"
+        testAnnotationProcessor "ru.tinkoff.kora:annotation-processors"
     }
     ```
 
@@ -210,6 +311,7 @@ Kora рассчитана на сборку через [Gradle](https://gradle.o
     val koraBom: Configuration by configurations.creating
     configurations {
         ksp.get().extendsFrom(koraBom)
+        kspTest.get().extendsFrom(koraBom)
         compileOnly.get().extendsFrom(koraBom)
         api.get().extendsFrom(koraBom)
         implementation.get().extendsFrom(koraBom)
@@ -218,8 +320,11 @@ Kora рассчитана на сборку через [Gradle](https://gradle.o
     dependencies {
         koraBom(platform("ru.tinkoff.kora:kora-parent:1.2.18"))
         ksp("ru.tinkoff.kora:symbol-processors")
+        kspTest("ru.tinkoff.kora:symbol-processors")
     }
     ```
+
+Для сборки через `Maven` импорт `BOM` и путь обработчика аннотаций настраиваются так, как показано в разделе [Maven](#maven).
 
 После этого зависимости модулей можно указывать без версии, например:
 
@@ -233,6 +338,15 @@ Kora рассчитана на сборку через [Gradle](https://gradle.o
 
     ```kotlin
     implementation("ru.tinkoff.kora:http-server-undertow")
+    ```
+
+=== ":simple-apachemaven: `Maven`"
+
+    ```xml
+    <dependency>
+        <groupId>ru.tinkoff.kora</groupId>
+        <artifactId>http-server-undertow</artifactId>
+    </dependency>
     ```
 
 ## Запуск { #run }
